[package]
name = "hook_the_game"
version = "0.1.0"
publish = false
authors = ["Aaron Askew <aaronaskew@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib", "bevy/dynamic_linking"]

# All of Bevy's default features exept for the audio related ones, since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    # "hdr",
    # "ktx2",
    # "zstd",
    # "x11",
    "bevy_gizmos",
    # "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_kira_audio = { version = "0.17" }
bevy_asset_loader = { version = "0.17", features = ["2d"] }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "HtmlVideoElement",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "DomRect",
    "CssStyleDeclaration",
    "HtmlMediaElement",
    "Event",
    "EventTarget",
    "UiEvent",
    "console",
] }
bevy-inspector-egui = "0.20.0"
bevy-debug-text-overlay = "6.0.0"
bevy_ecs_ldtk = "0.8.0"
bevy_editor_pls = "0.5.0"
bevy_rapier2d = { version = "0.22", features = [
    "debug-render-2d",
    "wasm-bindgen",
] }

[build-dependencies]
embed-resource = "1.4"
